--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: tea-quality-backend
     runtime: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: python app.py
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10.14
+        value: 3.10.14  
