--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: python
     plan: free
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: python app2.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.14  
