--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==3.0.3
-Flask-Cors==4.0.1
-torch==2.9.0
-torchvision==0.20.0
-opencv-python-headless==4.10.0.84
-Pillow==10.4.0
-numpy==2.1.2
-gunicorn==21.2.0
+flask
+flask-cors
+torch
+torchvision
+numpy
+pillow
+opencv-python
